<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="16dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="16dp"
              tools:context="roberttaylor.cproject.View.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <TextView
            android:id="@+id/signUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/signInTitle"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/signInUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpTitle"
            android:hint="@string/signInUserName"/>

        <EditText
            android:id="@+id/signInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signInUserName"
            android:layout_marginTop="15dp"
            android:hint="@string/signInPassword"/>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/signInPassword"
            android:background="@android:color/black"
            android:text="@string/signInButton"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/registerLink"
            android:layout_below="@id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_bright"
            android:text="@string/registerLink"/>


    </RelativeLayout>
</LinearLayout>

